k8s/base/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-devops-oncall-agent-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ai-devops-api
            pathType: Prefix
            backend:
              service:
                name: ai-devops-oncall-agent
                port:
                  number: 8000

          - path: /ai-devops
            pathType: Prefix
            backend:
              service:
                name: ai-devops-oncall-agent-ui
                port:
                  number: 3000
